src/.artifacts/prd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: une-ai-api-service
  namespace: #{namespace}#
spec:
  selector:
    app: une-ai-api
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
